After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690309 - av-cp: Ignore initial notify
av-cp: Ignore initial notify
Status: RESOLVED FIXED
Product: gupnp-tools
Classification: Other
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-12-16 21:47 UTC by Jens Georg
Modified: 2019-02-22 05:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
av-cp: Ignore initial notify (2.57 KB, patch)
2012-12-16 21:47 UTC, Jens Georg
committed Details | Review

Description Jens Georg 2012-12-16 21:47:33 UTC
Prevents multiple entries in treeview people were seeing after we fixed the
ContainerUpdateID notification in Rygel.
Comment 1 Jens Georg 2012-12-16 21:47:35 UTC
Created attachment 231669 [details] [review]
av-cp: Ignore initial notify

UPnP events are supposed to send the current state. In the case of
ContainerUpdateIDs we get the last update event which is completely
irrelevant for our use-case, causing an initial browse and with it the
duplicate entries.
Comment 2 Jens Georg 2012-12-18 13:35:21 UTC
Attachment 231669 [details] pushed as fa77ebc - av-cp: Ignore initial notify