av-cp: Ignore initial notify

UPnP events are supposed to send the current state. In the case of
ContainerUpdateIDs we get the last update event which is completely
irrelevant for our use-case, causing an initial browse and with it the
duplicate entries.

https://bugzilla.gnome.org/show_bug.cgi?id=690309